tests/fixtures/positive/compose/ComposeSideEffectInComposition.kt
package test
import androidx.compose.runtime.Composable

@Composable
fun Screen(vm: VM) {
    vm.tracker.seen = true
    Content(vm.state)
}
